@@ -14,6 +14,7 @@ Update table widths and font size for related-activity
 Display result main titles
 Display achieved percentage as color indicators
 Update new savi examples
+Display glossary for results
 
 
 Development Portal (2020-02-28 shi)
